# kiro.rs

./: .dockerignore  .gitignore  CHANGELOG.md  Cargo.toml  Dockerfile  README.md  config.example.json
.github/workflows/: build.yaml  docker-build.yaml  release.yaml
admin-ui/: package.json
admin-ui/src/: App.tsx
admin-ui/src/api/: credentials.ts  i7relay.ts
admin-ui/src/components/: auto-refill-page.tsx  batch-import-dialog.tsx  client-keys-page.tsx  concurrency-monitor.tsx  credential-card.tsx  dashboard.tsx  kam-import-dialog.tsx  model-mapping-dialog.tsx  model-mapping-panel.tsx  overview-page.tsx  proxy-pool-dialog.tsx  settings-page.tsx  topbar-tools.tsx  trace-log-page.tsx  update-token-dialog.tsx
admin-ui/src/components/charts/: time-series-chart.tsx
admin-ui/src/components/ui/: badge.tsx  button.tsx  card.tsx  checkbox.tsx  dialog.tsx  dropdown-menu.tsx  input.tsx  progress.tsx  select.tsx  switch.tsx  textarea.tsx  tooltip.tsx
admin-ui/src/hooks/: use-credentials.ts
admin-ui/src/lib/: storage.ts  utils.ts
admin-ui/src/types/: api.ts
docs/: cache-fingerprint-redesign.md  scheduler-kiro-go-redesign.md
src/: fingerprint_client.rs  http_client.rs  main.rs  security.rs  token.rs
src/admin/: client_keys.rs  handlers.rs  mod.rs  proxy_pool.rs  router.rs  service.rs  trace_db.rs  types.rs  usage_stats.rs
src/admin/service/: mod.rs  sso.rs
src/anthropic/: cache_metering.rs  converter.rs  handlers.rs  middleware.rs  mod.rs  payload_truncate.rs  prompt_filter.rs  response_cache.rs  router.rs  stream.rs  types.rs  websearch.rs  websearch_loop.rs
src/i7relay/: audit.rs  client.rs  handlers.rs  mod.rs  poll.rs  restock.rs
src/kiro/: provider.rs  token_manager.rs
src/kiro/auth/: social.rs
src/kiro/endpoint/: cli.rs  ide.rs  mod.rs
src/kiro/model/: credentials.rs  token_refresh.rs
src/kiro/token_manager/: credential_admin.rs  mod.rs  remote_api.rs
src/model/: config.rs
src/openai/: convert.rs  handlers.rs  mod.rs  model_mapping.rs
