[package]
name = "kiro-rs"
version = "0.7.1"
edition = "2024"

[features]
# 默认启用 TLS 指纹（wreq/BoringSSL）。native-tls 仍可选，但与 tls-fingerprint 互斥：
# openssl-sys(native-tls-vendored) 与 boring-sys2 都导出 BIO_* 等符号，同时静态链接会
# 重复符号报错。两者取一：默认走 rustls + 指纹;需 native-tls 时用
# `--no-default-features --features native-tls`。部署镜像用 `--no-default-features --features tls-fingerprint`。
default = ["tls-fingerprint"]
native-tls = ["reqwest/native-tls-vendored"]
tls-fingerprint = ["dep:wreq", "dep:wreq-util"]

[profile.release]
lto = "thin"
codegen-units = 16
strip = true

[dependencies]
axum = "0.8"
tokio = { version = "1.0", features = ["full"] }
reqwest = { version = "0.12", default-features = false, features = ["stream", "json", "socks", "rustls-tls-webpki-roots", "rustls-tls-native-roots", "http2", "system-proxy", "charset"] }
# TLS 指纹伪装客户端(可选启用,由 config.tls_fingerprint_enabled 运行时开关控制)。
# wreq 基于 BoringSSL(boring-sys2),可模拟浏览器 JA3/JA4/HTTP2 指纹;wreq-util 提供 Emulation 预设。
# 构建需 cmake + libclang(见 Dockerfile / memory: wreq-boringssl-build-recipe)。
# 注：暂不启用 wreq 的 socks 特性（tokio-socks 未在离线缓存内且当前网络代理不稳定）；
# SOCKS 代理仍由 reqwest 主路径支持，指纹路径先支持 http/https 代理。待网络恢复可加回 "socks"。
# 由 `tls-fingerprint` 特性按需启用（与 native-tls 互斥，见 [features] 注释）。
wreq = { version = "5", default-features = false, features = ["stream", "webpki-roots"], optional = true }
wreq-util = { version = "2", optional = true }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1.0"
http = "1.0"
httpdate = "1.0"
futures = "0.3"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.10", features = ["v1", "v4", "fast-rng"] }
fastrand = "2"
getrandom = "0.3"   # OS CSPRNG，用于 security::secure_token_urlsafe 生成默认 API Key
sha2 = "0.10"
hex = "0.4"
crc = "3"           # CRC32C 计算
bytes = "1"         # 高效的字节缓冲区
tower-http = { version = "0.6", features = ["cors"] }
clap = { version = "4.5", features = ["derive"] }
urlencoding = "2"
parking_lot = "0.12"  # 高性能同步原语
# Image resize for inbound user/MCP images so AWS Q stays within request size
# limit. Pure-Rust, no C deps. PNG/JPEG/WebP/GIF only — keeps build slim.
image = { version = "0.25", default-features = false, features = ["png", "jpeg", "webp", "gif"] }
base64 = "0.22"
thiserror = "1"
subtle = "2.6"        # 常量时间比较（防止时序攻击）
rust-embed = "8"      # 嵌入静态文件
mime_guess = "2"      # MIME 类型推断
flate2 = "1"        # tar.gz 解压（在线更新）
tar = "0.4"         # tar 解析（在线更新）
zip = { version = "2", default-features = false, features = ["deflate"] }  # zip 解压（Windows 在线更新）
rusqlite = { version = "0.32", features = ["bundled"] }  # 请求链路追踪持久化（自带 SQLite 源码）
